bugfix element wraps, toggle roll type and bonus dice

--- a/The One Ring 2e/sheet.css
+++ b/The One Ring 2e/sheet.css
@@ -45,6 +45,8 @@
     border-image-repeat: repeat;
     padding-right: 10px;
     z-index:0;
+    white-space : nowrap; 
+    overflow : hidden;
 }
 .charsheet .sheet-pc{
     min-width: 1200px;
@@ -397,12 +399,6 @@
 .charsheet #strength{
     grid-area: stre;
     border-left: var(--solidborder);
-    /*
-    border-left: 8px solid transparent;
-    border-image-source: url('https://raw.githubusercontent.com/bhuesemann/roll20-character-sheets/tor2e_02-00-00/The%20One%20Ring%20Second%20Edition%20(Basic)/assets/boxline-border-red.png');
-    border-image-slice: 8 8 8 8;
-    border-image-repeat: repeat;
-    */
 }
 .charsheet #heart{
     grid-area: hear;
